--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HASAN TELECOM Vault</title>
+
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#2563eb">
 
-<!-- Tailwind CSS -->
+<!-- Tailwind -->
 <script src="https://cdn.tailwindcss.com"></script>
 <script>tailwind.config={darkMode:'class'}</script>
 
@@ -16,45 +17,49 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
 <style>
-body { font-family: 'Inter', sans-serif; transition: background-color 0.3s, color 0.3s; }
-input::placeholder { color:#64748b; }
+body{font-family:Inter,sans-serif}
 </style>
 </head>
-<body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 p-4 flex flex-col items-center gap-6">
+
+<body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 min-h-screen p-4 flex flex-col items-center gap-6">
 
 <!-- HEADER -->
-<div class="w-full max-w-xl bg-white dark:bg-slate-900 border rounded-[32px] p-8 flex flex-col items-center shadow-xl text-center">
-  <h1 class="text-3xl font-black text-blue-600 dark:text-blue-500 uppercase mb-1">HASAN TELECOM</h1>
-  <p id="modeIndicator" class="text-xs text-slate-400 uppercase mb-6">STAFF VIEW MODE</p>
-  <div class="flex items-center gap-4">
-    <button onclick="toggleTheme()" class="p-4 rounded-2xl bg-slate-100 dark:bg-slate-800">
+<div class="w-full max-w-xl bg-white dark:bg-slate-900 rounded-3xl p-6 shadow-xl text-center">
+  <h1 class="text-3xl font-black text-blue-600 dark:text-blue-500">HASAN TELECOM</h1>
+  <p id="modeIndicator" class="text-xs text-slate-400 mt-1">STAFF VIEW MODE</p>
+
+  <div class="flex justify-center gap-4 mt-4">
+    <button onclick="toggleTheme()" class="p-3 rounded-xl bg-slate-100 dark:bg-slate-800">
       <span id="themeIcon">🌙</span>
     </button>
-    <button id="adminBtn" onclick="toggleAdmin()" class="bg-blue-600 text-white px-10 py-4 rounded-2xl font-black uppercase text-sm tracking-widest">LOGIN</button>
+
+    <button id="adminBtn" onclick="toggleAdmin()" class="bg-blue-600 text-white px-6 py-3 rounded-xl font-bold">
+      LOGIN
+    </button>
+
     <div id="adminTools" class="hidden flex gap-2">
-      <button onclick="generatePDF()" class="bg-orange-600 p-4 rounded-2xl text-white">📄</button>
-      <button onclick="logout()" class="bg-red-600 p-4 rounded-2xl text-white">✕</button>
+      <button onclick="generatePDF()" class="bg-orange-600 p-3 rounded-xl text-white">📄</button>
+      <button onclick="logout()" class="bg-red-600 p-3 rounded-xl text-white">✕</button>
     </div>
   </div>
 </div>
 
 <!-- SEARCH -->
-<div class="w-full max-w-xl bg-white dark:bg-slate-900/50 border rounded-[32px] p-6 mt-4 shadow-xl">
-  <div class="relative">
-    <input type="text" id="searchInput" onkeyup="render()" placeholder="Search inventory..." class="w-full bg-slate-100 dark:bg-slate-950 border p-4 rounded-2xl text-slate-900 dark:text-slate-300 focus:ring-2 focus:ring-blue-500">
-  </div>
+<div class="w-full max-w-xl bg-white dark:bg-slate-900 rounded-3xl p-4 shadow">
+  <input id="searchInput" onkeyup="render()" placeholder="Search inventory..."
+    class="w-full p-3 rounded-xl bg-slate-100 dark:bg-slate-800 outline-none">
 </div>
 
-<!-- VAULT CONTENT -->
-<div id="vaultContent" class="w-full max-w-xl space-y-3 mt-4"></div>
-<div id="emptyState" class="hidden p-20 text-center text-slate-400 italic text-xs">No items found</div>
+<!-- LIST -->
+<div id="vaultContent" class="w-full max-w-xl space-y-3"></div>
+<div id="emptyState" class="hidden text-slate-400 italic">No items found</div>
 
-<!-- FIREBASE & APP LOGIC -->
+<!-- MAIN LOGIC -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
 import { getDatabase, ref, set, onValue, remove } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-database.js";
 
-// ---------- FIREBASE CONFIG ----------
+/* 🔥 FIREBASE CONFIG */
 const firebaseConfig = {
   apiKey: "AIzaSyD2_M0SwhaQ90wuEVBdDP91zBc2GDWKglQ",
   authDomain: "hasan-telecom-ad91e.firebaseapp.com",
@@ -64,134 +69,127 @@ const firebaseConfig = {
   messagingSenderId: "199331841561",
   appId: "1:199331841561:web:3e2ef8bdb21f222ee5cc88"
 };
+
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// ---------- APP STATE ----------
+/* APP STATE */
 const ADMIN_PASSWORD = "511436";
 let isAdmin = false;
 let data = [];
 
-// ---------- THEME ----------
-function applyTheme(theme) {
-  if(theme === 'dark') {
-    document.documentElement.classList.add('dark');
-    document.getElementById('themeIcon').innerText = '☀️';
-  } else {
-    document.documentElement.classList.remove('dark');
-    document.getElementById('themeIcon').innerText = '🌙';
-  }
-  localStorage.setItem('theme', theme);
+/* 🌙 THEME */
+function applyTheme(t){
+  document.documentElement.classList.toggle("dark", t==="dark");
+  document.getElementById("themeIcon").innerText = t==="dark"?"☀️":"🌙";
+  localStorage.setItem("theme", t);
 }
 
-function toggleTheme() {
-  const current = localStorage.getItem('theme') || 'dark';
-  applyTheme(current==='dark'?'light':'dark');
+function toggleTheme(){
+  applyTheme(localStorage.getItem("theme")==="dark"?"light":"dark");
 }
 
-document.addEventListener('DOMContentLoaded', () => {
-  const savedTheme = localStorage.getItem('theme') || 'dark';
-  applyTheme(savedTheme);
-});
+applyTheme(localStorage.getItem("theme") || "dark");
 
-// ---------- ADMIN LOGIN ----------
-function toggleAdmin() {
-  const key = prompt("Enter Admin Password:");
-  if(key === ADMIN_PASSWORD) {
+/* 🔐 LOGIN */
+function toggleAdmin(){
+  const key = prompt("Admin Password:");
+  if(key === ADMIN_PASSWORD){
     isAdmin = true;
-    alert("Admin login successful!");
+    alert("Admin Login Successful");
   } else {
-    alert("Incorrect password!");
+    alert("Wrong Password");
     isAdmin = false;
   }
   updateUI();
 }
 
-function logout() {
+function logout(){
   isAdmin = false;
   updateUI();
 }
 
-function updateUI() {
-  document.getElementById('adminTools').classList.toggle('hidden', !isAdmin);
-  document.getElementById('adminBtn').classList.toggle('hidden', isAdmin);
-  document.getElementById('modeIndicator').innerText = isAdmin?"ADMIN AUTHORIZED":"STAFF VIEW MODE";
+function updateUI(){
+  document.getElementById("adminTools").classList.toggle("hidden", !isAdmin);
+  document.getElementById("adminBtn").classList.toggle("hidden", isAdmin);
+  document.getElementById("modeIndicator").innerText =
+    isAdmin ? "ADMIN AUTHORIZED" : "STAFF VIEW MODE";
   render();
 }
 
-// ---------- FIREBASE FUNCTIONS ----------
-function loadInventory() {
-  const dbRef = ref(db, 'inventory');
-  onValue(dbRef, snapshot => {
-    const val = snapshot.val();
-    data = val ? Object.values(val) : [];
-    render();
-  });
+/* 🔥 FIREBASE SYNC */
+onValue(ref(db,"inventory"), snap=>{
+  data = snap.val() ? Object.values(snap.val()) : [];
+  render();
+});
+
+function saveItem(item){
+  if(!item.id) item.id = Date.now().toString();
+  set(ref(db,"inventory/"+item.id), item);
 }
 
-function saveItem(item) {
-  if(!item.id) item.id = Date.now().toString(); // ensure unique id
-  set(ref(db, 'inventory/' + item.id), item);
-}
-
-function deleteItem(id) {
-  if(confirm("Delete this item?")) {
-    remove(ref(db, 'inventory/' + id));
+function deleteItem(id){
+  if(confirm("Delete item?")){
+    remove(ref(db,"inventory/"+id));
   }
 }
 
-// ---------- RENDER ----------
-function render() {
-  const search = document.getElementById('searchInput').value.toLowerCase();
-  const container = document.getElementById('vaultContent');
-  const filtered = data.filter(i => `${i.brand} ${i.name} ${i.cat || ''}`.toLowerCase().includes(search));
+/* 🧾 RENDER */
+function render(){
+  const q = searchInput.value.toLowerCase();
+  vaultContent.innerHTML = "";
 
-  container.innerHTML = '';
-  if(filtered.length === 0){ 
-    document.getElementById('emptyState').classList.remove('hidden'); 
-    return;
-  } else { 
-    document.getElementById('emptyState').classList.add('hidden'); 
-  }
+  const filtered = data.filter(i =>
+    (i.brand+i.name+i.cat).toLowerCase().includes(q)
+  );
 
-  filtered.forEach(item => {
-    container.innerHTML += `
-    <div class="bg-white dark:bg-slate-900 rounded-[24px] border p-4">
-      <div class="flex justify-between items-center">
-        <div>
-          <span class="font-bold">${item.brand}</span> - ${item.name} 
+  emptyState.classList.toggle("hidden", filtered.length>0);
+
+  filtered.forEach(i=>{
+    vaultContent.innerHTML += `
+      <div class="bg-white dark:bg-slate-900 rounded-xl p-4 shadow flex justify-between">
+        <div><b>${i.brand}</b> ${i.name}</div>
+        <div onclick="toggleStock('${i.id}')" class="cursor-pointer">
+          ${i.inStock?"🟢":"🔴"}
         </div>
-        <div class="cursor-pointer" onclick="item.inStock=!item.inStock; saveItem(item); render();">
-          ${item.inStock?'<span class="text-green-500">IN STOCK</span>':'<span class="text-red-500">OUT</span>'}
-        </div>
-        ${isAdmin?`<button class="text-red-500" onclick="deleteItem('${item.id}')">✕</button>`:''}
-      </div>
-    </div>`;
+        ${isAdmin?`<button onclick="deleteItem('${i.id}')" class="text-red-500">✕</button>`:""}
+      </div>`;
   });
 }
 
-// ---------- PDF EXPORT ----------
-function generatePDF() {
+function toggleStock(id){
+  const item = data.find(i=>i.id===id);
+  item.inStock = !item.inStock;
+  saveItem(item);
+}
+
+/* 📄 PDF */
+function generatePDF(){
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
-  doc.setFontSize(20);
-  doc.text("HASAN TELECOM - INVENTORY REPORT",14,20);
-  const rows = data.map(i => [i.brand, i.name, i.cat||'', i.inStock?"YES":"NO", i.price||"Contact"]);
-  doc.autoTable({startY:30, head:[['Brand','Model','Category','Available','Price']], body:rows});
-  doc.save('HasanTelecom_Report.pdf');
+  doc.text("HASAN TELECOM INVENTORY",14,20);
+  doc.autoTable({
+    startY:30,
+    head:[["Brand","Model","Stock"]],
+    body:data.map(i=>[i.brand,i.name,i.inStock?"YES":"NO"])
+  });
+  doc.save("inventory.pdf");
 }
 
-// ---------- INIT ----------
-loadInventory();
+/* 🔑 EXPOSE FUNCTIONS (CRITICAL FIX) */
+window.toggleTheme = toggleTheme;
+window.toggleAdmin = toggleAdmin;
+window.logout = logout;
+window.deleteItem = deleteItem;
+window.toggleStock = toggleStock;
+window.generatePDF = generatePDF;
+window.render = render;
 </script>
 
-<!-- ---------- SERVICE WORKER ----------
-Ensure offline caching ---------- -->
+<!-- SERVICE WORKER -->
 <script>
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('sw.js')
-    .then(()=>console.log("Service Worker Registered"))
-    .catch(err=>console.error(err));
+if("serviceWorker" in navigator){
+  navigator.serviceWorker.register("sw.js");
 }
 </script>
 
