--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ body { font-family: 'Inter', sans-serif; -webkit-tap-highlight-color: transparen
 .sticky-bar { position: sticky; top: 0; z-index: 50; }
 .modal-animate { animation: fadeIn 0.15s ease-out; }
 @keyframes fadeIn { from { opacity: 0; transform: scale(0.98); } to { opacity: 1; transform: scale(1); } }
-input[type="checkbox"] { width: 18px; height: 18px; accent-color: #2563eb; cursor: pointer; }
 </style>
 </head>
 <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 min-h-screen p-4 md:p-8 flex flex-col items-center gap-6 transition-colors duration-300">
@@ -56,8 +55,6 @@ input[type="checkbox"] { width: 18px; height: 18px; accent-color: #2563eb; curso
         <div id="adminTools" class="hidden flex gap-2"> 
             <button onclick="exportExcel()" title="Export Filtered" class="bg-orange-600 p-4 rounded-2xl text-white shadow-lg">📊</button> 
             <button onclick="downloadBackup()" title="Full Backup" class="bg-emerald-600 p-4 rounded-2xl text-white shadow-lg">💾</button> 
-            <button onclick="toggleSelectMode()" id="selectToggleBtn" title="Selection Mode" class="bg-slate-600 p-4 rounded-2xl text-white shadow-lg">☑️</button> 
-            <button onclick="deleteSelected()" title="Delete Selected" class="bg-red-700 p-4 rounded-2xl text-white shadow-lg">🗑️</button> 
             <button onclick="logout()" title="Logout" class="bg-red-600 p-4 rounded-2xl text-white shadow-lg">✕</button> 
       </div>
     </div>
@@ -83,6 +80,13 @@ input[type="checkbox"] { width: 18px; height: 18px; accent-color: #2563eb; curso
         <select id="modelBrand" class="bg-slate-100 dark:bg-slate-800 p-4 rounded-xl outline-none font-bold text-sm"></select>
         <select id="modelCategory" class="bg-slate-100 dark:bg-slate-800 p-4 rounded-xl outline-none font-bold text-sm"></select>
     </div>
+    <div class="flex flex-col gap-2">
+        <p class="text-[10px] font-black text-slate-400 uppercase ml-2">Default Price Color for Save:</p>
+        <div class="grid grid-cols-2 gap-2">
+            <button id="bulkColorBlue" onclick="setBulkColor('blue')" class="py-2 rounded-xl border-2 border-blue-600 bg-blue-600/10 text-blue-600 font-black text-[10px] uppercase">Visible (Blue)</button>
+            <button id="bulkColorGreen" onclick="setBulkColor('green')" class="py-2 rounded-xl border-2 border-transparent bg-slate-100 dark:bg-slate-800 text-slate-500 font-black text-[10px] uppercase">Hidden (Green)</button>
+        </div>
+    </div>
     <textarea id="bulkInput" rows="3" placeholder="Model, Price" class="w-full bg-slate-100 dark:bg-slate-800 p-4 rounded-xl outline-none font-mono text-sm"></textarea>
     <div class="grid grid-cols-2 gap-4">
         <button onclick="addOrUpdate()" class="bg-blue-600 text-white py-4 rounded-2xl font-black uppercase tracking-widest">SAVE</button>
@@ -101,7 +105,6 @@ input[type="checkbox"] { width: 18px; height: 18px; accent-color: #2563eb; curso
 <div id="emptyState" class="hidden p-20 text-center text-slate-400 font-bold italic">No results match your search.</div>
 
 <script>
-// CONFIG & STATE
 const ADMIN_KEY_ENCODED = "NTExNDM2";
 const BRANDS = ["SAMSUNG","XIAOMI","OPPO","VIVO","REALME","IPHONE","HUAWEI","ONEPLUS","ITEL","TECNO","INFINIX","GOOGLE PIXEL","SYMPHONY","NOKIA","MOTOROLA","NOTHING PHONE"];
 const CATEGORIES = ["Logic Board","Logic Board(IC)","Front Camera","Main Flex","LCD Flex","Finger Sensor","Ringer Box","Ear Speaker","Sim Tray","Power Flex","Volume Flex","Rubber switch","Camera Glass","Speaker Net","Network Flex","SIM Flex","Flashlight Sensor","Middle Frame","Housing","Back Part"];
@@ -113,18 +116,16 @@ data.forEach(i => {
 });
 
 let isAdmin = false;
-let selectMode = false;
-let selectedItems = new Set();
+let bulkColor = 'blue';
 let expandedModels = new Set();
 let searchTimer;
 let lastScrollPos = 0;
 let modalCallback = null;
 let currentEditingId = null;
-let windowFiltered = []; // Globally tracked for Excel Export
+let windowFiltered = [];
 
 const toTitleCase = s => s.toLowerCase().split(' ').map(w=>w[0].toUpperCase()+w.slice(1)).join(' ');
 
-// THEME CONTROL
 function toggleTheme(){
     const d = document.documentElement.classList.toggle('dark');
     localStorage.theme = d ? 'dark' : 'light';
@@ -132,12 +133,11 @@ function toggleTheme(){
 }
 if(localStorage.theme === 'light') document.documentElement.classList.remove('dark');
 
-// AUTH CONTROL
 function toggleAdmin(){
     const p = prompt("Enter Admin Key:");
     if(p && btoa(p) === ADMIN_KEY_ENCODED){ isAdmin = true; updateUI(); }
 }
-function logout(){ isAdmin = false; selectMode = false; selectedItems.clear(); updateUI(); }
+function logout(){ isAdmin = false; updateUI(); }
 
 function updateUI(){
     adminPanel.classList.toggle('hidden', !isAdmin);
@@ -148,7 +148,19 @@ function updateUI(){
     render();
 }
 
-// MODAL CONTROLLERS
+function setBulkColor(color) {
+    bulkColor = color;
+    bulkColorBlue.classList.toggle('border-blue-600', color === 'blue');
+    bulkColorBlue.classList.toggle('bg-blue-600/10', color === 'blue');
+    bulkColorBlue.classList.toggle('border-transparent', color !== 'blue');
+    bulkColorBlue.classList.toggle('bg-slate-100', color !== 'blue');
+    
+    bulkColorGreen.classList.toggle('border-emerald-600', color === 'green');
+    bulkColorGreen.classList.toggle('bg-emerald-600/10', color === 'green');
+    bulkColorGreen.classList.toggle('border-transparent', color !== 'green');
+    bulkColorGreen.classList.toggle('bg-slate-100', color !== 'green');
+}
+
 function openActionModal(title, defaultValue, callback) {
     modalTitle.textContent = title;
     modalInput.value = defaultValue;
@@ -174,33 +186,6 @@ function setPriceColor(color) {
     closeColorPicker();
 }
 
-// SELECTION LOGIC
-function toggleSelectMode() {
-    selectMode = !selectMode;
-    selectedItems.clear();
-    selectToggleBtn.classList.toggle('bg-blue-600', selectMode);
-    selectToggleBtn.classList.toggle('bg-slate-600', !selectMode);
-    render();
-}
-
-function toggleSelect(id, checkbox) {
-    const itemId = Number(id);
-    if (checkbox.checked) selectedItems.add(itemId);
-    else selectedItems.delete(itemId);
-    const row = checkbox.closest('tr');
-    if(row) row.style.backgroundColor = checkbox.checked ? 'rgba(239, 68, 68, 0.08)' : '';
-}
-
-function deleteSelected() {
-    if (selectedItems.size === 0) return alert("No items selected!");
-    if (confirm(`Delete ${selectedItems.size} selected items forever?`)) {
-        data = data.filter(item => !selectedItems.has(Number(item.id)));
-        selectedItems.clear();
-        save();
-    }
-}
-
-// DATA OPERATIONS
 function addOrUpdate(){
     const bulk = bulkInput.value;
     const brand = modelBrand.value;
@@ -210,15 +195,25 @@ function addOrUpdate(){
         let [rawN, price="Contact"] = line.split(',').map(s=>s.trim());
         const dName = toTitleCase(rawN);
         const existing = data.find(i => i.brand===brand && i.cat===cat && i.name.toLowerCase()===rawN.toLowerCase());
-        if(existing){ existing.price = price; existing.name = dName; }
-        else { data.push({id:Date.now()+Math.random(), name:dName, price, cat, brand, inStock:true, color:'blue'}); }
+        if(existing){ 
+            existing.price = price; 
+            existing.name = dName;
+            existing.color = bulkColor;
+        }
+        else { data.push({id:Date.now()+Math.random(), name:dName, price, cat, brand, inStock:true, color:bulkColor}); }
     });
     bulkInput.value=''; save();
 }
 
+function deleteItem(id) {
+    if(confirm("Delete this item?")) {
+        data = data.filter(i => i.id != id);
+        save();
+    }
+}
+
 function save(){ localStorage.setItem('ht_vault_v2', JSON.stringify(data)); render(); }
 
-// RENDER & FILTER ENGINE
 function toggleModel(key){
     if(expandedModels.has(key)) expandedModels.delete(key);
     else { expandedModels.add(key); lastScrollPos = window.scrollY; }
@@ -238,10 +233,7 @@ function render(){
 
     windowFiltered = data.filter(i=>{
         const blob = `${i.brand} ${i.name} ${i.cat}`.toLowerCase();
-        // SMART SEARCH: If query is 'out', show all out of stock
-        if(rawQuery === "out") {
-            return !i.inStock && (brandFilter === "ALL" || i.brand === brandFilter);
-        }
+        if(rawQuery === "out") return !i.inStock && (brandFilter === "ALL" || i.brand === brandFilter);
         return searchTerms.every(t=>blob.includes(t)) && (brandFilter==="ALL"||i.brand===brandFilter);
     });
 
@@ -278,15 +270,15 @@ function render(){
                             const pColor = item.color==='green' ? 'text-green-600' : 'text-blue-600';
                             const isGreenHidden = !isAdmin && item.color==='green';
                             const pDisp = isGreenHidden ? 'Contact' : (item.price && item.price!=='Contact'?`৳${item.price}`:'Contact');
-                            return `<tr class="transition-colors ${selectedItems.has(Number(item.id))?'bg-red-50 dark:bg-red-900/10':''}">
-                                ${selectMode?`<td class="pl-5 py-4 w-10"><input type="checkbox" onchange="toggleSelect(${item.id}, this)" ${selectedItems.has(Number(item.id))?'checked':''}></td>`:''}
+                            return `<tr>
                                 <td class="px-6 py-4 font-bold text-[11px] uppercase text-slate-500">${item.cat}</td>
-                                <td onclick="${selectMode?'':'toggleStock('+item.id+')'}" class="px-2 py-4 text-center text-[10px] font-black cursor-pointer">
-                                    ${item.inStock?'<span class="text-emerald-500">IN STOCK</span>':'<span class="text-red-500">OUT OF STOCK</span>'}
+                                <td onclick="toggleStock(${item.id})" class="px-2 py-4 text-center text-[10px] font-black cursor-pointer">
+                                    ${item.inStock?'<span class="text-emerald-500">IN STOCK</span>':'<span class="text-red-500">STOCK OUT</span>'}
                                 </td>
-                                <td onclick="${isAdmin && !selectMode ? 'editPriceModal('+item.id+')' : ''}" class="px-6 py-4 text-right font-mono font-bold ${pColor} price-cell" data-id="${item.id}">
+                                <td onclick="${isAdmin ? 'editPriceModal('+item.id+')' : ''}" class="px-4 py-4 text-right font-mono font-bold ${pColor} price-cell" data-id="${item.id}">
                                     ${pDisp}
                                 </td>
+                                ${isAdmin ? `<td class="pr-6 py-4 w-8 text-right"><button onclick="deleteItem(${item.id})" class="text-red-500/40 hover:text-red-600 font-bold">✕</button></td>` : ''}
                             </tr>`;
                         }).join('')}
                     </tbody>
@@ -298,7 +290,7 @@ function render(){
     vaultContent.innerHTML = html;
     emptyState.classList.toggle('hidden', windowFiltered.length > 0);
 
-    // Attach Event Handlers
+    // Re-attach long press for renames and price color
     document.querySelectorAll('.model-name').forEach(el=>{
         addLongPress(el, ()=>{
             if(!isAdmin) return;
@@ -318,14 +310,22 @@ function render(){
     });
 }
 
-// INTERACTIONS
+// Fixed Mobile Interaction Logic
 function addLongPress(el, callback) {
     let timer;
-    const start = () => { timer = setTimeout(callback, 600); };
+    const start = (e) => { 
+        // Prevent default only if necessary, but allow scrolling
+        timer = setTimeout(callback, 700); 
+    };
     const cancel = () => clearTimeout(timer);
+
     el.addEventListener('mousedown', start);
     el.addEventListener('touchstart', start, {passive: true});
-    ['mouseup', 'mouseleave', 'touchend', 'touchcancel'].forEach(ev => el.addEventListener(ev, cancel));
+    
+    // Cancel timer if finger moves (scrolling) or lifts
+    ['mouseup', 'mouseleave', 'touchend', 'touchcancel', 'touchmove'].forEach(ev => {
+        el.addEventListener(ev, cancel);
+    });
 }
 
 function editPriceModal(id) {
@@ -346,16 +346,9 @@ function toggleStock(id){
 
 function debouncedRender(){ clearTimeout(searchTimer); searchTimer=setTimeout(render,150); }
 
-// EXPORT & BACKUP
 function exportExcel(){
     if (windowFiltered.length === 0) return alert("Nothing visible to export!");
-    const rows = windowFiltered.map(i=>({
-        Brand: i.brand,
-        Model: i.name,
-        Category: i.cat,
-        Stock: i.inStock ? "YES" : "NO",
-        Price: i.price
-    }));
+    const rows = windowFiltered.map(i=>({ Brand: i.brand, Model: i.name, Category: i.cat, Stock: i.inStock ? "YES" : "NO", Price: i.price }));
     const ws = XLSX.utils.json_to_sheet(rows);
     const wb = XLSX.utils.book_new();
     XLSX.utils.book_append_sheet(wb, ws, "Filtered_Vault");
@@ -370,19 +363,12 @@ function downloadBackup(){
 
 function importBackup(e){
     const r = new FileReader();
-    r.onload=()=>{ 
-        try { 
-            data=JSON.parse(r.result); 
-            save(); 
-            alert("Backup restored successfully!"); 
-        } catch(e){ alert("Invalid backup file."); }
-    };
+    r.onload=()=>{ try { data=JSON.parse(r.result); save(); alert("Backup restored!"); } catch(e){ alert("Invalid file."); } };
     r.readAsText(e.target.files[0]);
 }
 
-// AUTO COLLAPSE SCROLL LISTENER
 window.addEventListener('scroll', () => {
-    if (expandedModels.size > 0 && Math.abs(window.scrollY - lastScrollPos) > 300) {
+    if (expandedModels.size > 0 && Math.abs(window.scrollY - lastScrollPos) > 400) {
         expandedModels.clear(); render();
     }
 });
