--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ function addOrUpdate(){
     const cat = modelCategory.value;
     bulk.split('\n').forEach(line=>{
         if(!line.trim()) return;
-        let [rawN, price="Contact"] = line.split(',').map(s=>s.trim());
+        let [rawN, price="N/A"] = line.split(',').map(s=>s.trim());
         const dName = toTitleCase(rawN);
         const existing = data.find(i => i.brand===brand && i.cat===cat && i.name.toLowerCase()===rawN.toLowerCase());
         if(existing){ 
@@ -269,7 +269,7 @@ function render(){
                         ${items.map(item=>{
                             const pColor = item.color==='green' ? 'text-green-600' : 'text-blue-600';
                             const isGreenHidden = !isAdmin && item.color==='green';
-                            const pDisp = isGreenHidden ? 'Contact' : (item.price && item.price!=='Contact'?`৳${item.price}`:'Contact');
+                            const pDisp = isGreenHidden ? 'N/A' : (item.price && item.price!=='N/A'?`৳${item.price}`:'N/A');
                             return `<tr>
                                 <td class="px-6 py-4 font-bold text-[11px] uppercase text-slate-500">${item.cat}</td>
                                 <td onclick="toggleStock(${item.id})" class="px-2 py-4 text-center text-[10px] font-black cursor-pointer">
@@ -332,7 +332,7 @@ function editPriceModal(id) {
     const item = data.find(x=>x.id == id);
     if(!item) return;
     openActionModal("Edit Price", item.price, (newP) => {
-        item.price = newP.trim() || "Contact";
+        item.price = newP.trim() || "N/A";
         save();
     });
 }
